--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -75,7 +75,7 @@
                   <li><a href="#">{{'VIDEO_GALLERY' | translate}}</a></li>
                 </ul>
               </li>
-            <li><a class="nav-link scrollto" href="#">{{'DOWNLOADS' | translate}}</a></li>
+            <li><a class="nav-link scrollto" href="#">{{'DOWNLOADS' | translate}}s</a></li>
             <li><a class="nav-link scrollto" href="#">{{'FAQ' | translate}}</a></li>
             <li class="dropdown">
                 <a href="#"><span>{{'WHATS_NEW' | translate}}</span> <i class="bi bi-chevron-down"></i></a>
